--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@polymer/iron-meta": "3.0.1",
     "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.5.1",
+    "@vaadin-component-factory/vcf-nav": "1.0.6",
     "@vaadin/accordion": "23.2.10",
     "@vaadin/app-layout": "23.2.10",
     "@vaadin/avatar": "23.2.10",
@@ -118,6 +119,7 @@
     "@vaadin/virtual-list": "23.2.10",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
+    "line-awesome": "1.3.0",
     "lit": "2.4.1",
     "proj4": "2.8.0"
   },
@@ -254,7 +256,9 @@
     "@polymer/polymer": "$@polymer/polymer",
     "date-fns": "$date-fns",
     "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
-    "proj4": "$proj4"
+    "proj4": "$proj4",
+    "line-awesome": "$line-awesome",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav"
   },
   "vaadin": {
     "dependencies": {
@@ -264,6 +268,7 @@
       "@polymer/iron-meta": "3.0.1",
       "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
+      "@vaadin-component-factory/vcf-nav": "1.0.6",
       "@vaadin/accordion": "23.2.10",
       "@vaadin/app-layout": "23.2.10",
       "@vaadin/avatar": "23.2.10",
@@ -373,6 +378,7 @@
       "@vaadin/virtual-list": "23.2.10",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
+      "line-awesome": "1.3.0",
       "lit": "2.3.0",
       "proj4": "2.8.0"
     },
@@ -392,6 +398,6 @@
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0"
     },
-    "hash": "3b9d04c8cf35d3d7b778c25edf235de4114166529409829443ced01ec4e12024"
+    "hash": "8fc544ab0941685759be65f0297840bc205490f65ddced82c57efc9a8234c2bf"
   }
 }
