--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ vaadin.launch-browser=false
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
