--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.7.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
