--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <!-- Project from https://start.vaadin.com/project/26978f22-1ea8-4cb6-9db7-e1b673696c3e -->
     <groupId>com.example.application</groupId>
-    <artifactId>collaboration</artifactId>
-    <name>collaboration</name>
+    <artifactId>GamePal</artifactId>
+    <name>GamePal</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
